// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zero-config build should generate the expected files 1`] = `
Object {
  "0-6e85fc8647b22d1e56d2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\" data-message=\\"Hello world!\\"></div>
    <script type=\\"text/javascript\\" src=\\"/runtime-9b3900855aa0aeac070b.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main-19a7a9647dccb7dfc84f.js\\"></script>
  </body>
</html>",
  "main-19a7a9647dccb7dfc84f.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-9b3900855aa0aeac070b.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`zero-config start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  <script charset=\\"utf-8\\" src=\\"/0.js\\"></script></head>
  <body>
    <div id=\\"app\\" data-message=\\"Hello world!\\">Hello world!</div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    
  </head>
  <body>
    <div id=\\"app\\" data-message=\\"Hello world!\\"></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
